# chiff

./: .gitignore  Cargo.toml
benches/: corpus_cases.rs  diff_cases.rs
bindings/node/: index.cjs  index.d.ts  package.json
bindings/node/native/: Cargo.toml
bindings/node/native/src/: lib.rs
bindings/node/scripts/: corpus-diff-stats.cjs  hpatch-native-coalesce-report.cjs  hpatch-policy-report.cjs  prepare-addon.cjs  zstd-hdiff-report.cjs
bindings/node/test/: detect-format.test.cjs
docs/: baselines.md  hpatch-compatibility.md  hpatch-compatible-optimization-analysis.md  hpatch-listener-bridge.md  technical-plan.md
examples/: corpus_diff_stats.rs  diff_stats.rs  hermes_region_report.rs
fixtures/corpus/mixed-baseline/: README.md  metadata.json
fixtures/synthetic/generic-binary/: README.md
fixtures/synthetic/generic-binary/pairs/arbitrary-binary/: README.md  metadata.json
fixtures/synthetic/hermes-fallback/: README.md
fixtures/synthetic/hermes-fallback/pairs/form-mismatch/: README.md  metadata.json
fixtures/synthetic/hermes-fallback/pairs/invalid-header/: README.md  metadata.json
fixtures/synthetic/hermes-fallback/pairs/unsupported-version/: README.md  metadata.json
fixtures/synthetic/hermes-fallback/pairs/version-mismatch/: README.md  metadata.json
scripts/: generate-testhotupdate-corpus.cjs
src/: corpus.rs  engine.rs  format.rs  hermes.rs  hermes_opcodes.rs  hpatch.rs  lib.rs  output.rs  patch.rs
tests/: corpus_api.rs  corpus_mixed.rs  fixture_fallback.rs  format_detection.rs  hpatch_compat.rs  patch_roundtrip.rs
(+10 files in other folders)
