[package]
name = "chiff"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["bindings/node/native"]
resolver = "2"

[lib]
name = "chiff"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "diff_cases"
harness = false

[[bench]]
name = "corpus_cases"
harness = false
